--- a/Home.html
+++ b/Home.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h1>This is the home page 🏠</h1>
+    <marquee  direction="left">Welcome home</marquee>
 </body>
 </html>
