--- a/Home.html
+++ b/Home.html
@@ -8,5 +8,7 @@
 <body>
     <h1>This is the home page 🏠</h1>
     <marquee  direction="left">Welcome home</marquee>
+    <a href="/index.html"> go to index >></a>
+
 </body>
 </html>
