--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Hello world</h1>
 
-    <a href="/Home.html">go to home >></a>
+    <a href="/test/Home.html">go to home >></a>
     
 </body>
 </html>
